Issue #402 adjusted spacing around Free Online Courses link in footer

--- a/docroot/sites/all/themes/informea.theme/css/style-from-less.css
+++ b/docroot/sites/all/themes/informea.theme/css/style-from-less.css
@@ -642,6 +642,7 @@ body {
   padding-top: 15px;
   padding-bottom: 15px;
   margin-top: 1em;
+  margin-bottom: 1em;
 }
 [dir] .page-header {
   border-bottom: 1px solid #ddd;
