--- a/docroot/sites/all/themes/informea.theme/less/overrides/footer.less
+++ b/docroot/sites/all/themes/informea.theme/less/overrides/footer.less
@@ -24,7 +24,7 @@
 
     &--info {
       > .container {
-        @media (min-width:@screen-sm-min) {
+        @media (min-width: @screen-sm-min) {
           display: flex;
           flex-wrap: wrap;
         }
@@ -165,4 +165,5 @@
   padding-top: 15px;
   padding-bottom: 15px;
   margin-top: 1em;
+  margin-bottom: 1em;
 }
